# router/app.go
@@ -26,6 +26,8 @@ func Router() *gin.Engine {
 
 	// 用户
 	r.GET("/user-detail", service.GetUserDetail)
+	r.POST("/login", service.Login)
+	r.POST("/send-code", service.SendCode)
 
 	// 提交记录
 	r.GET("/submit-list", service.GetSubmitList)
